ジョブを変更してステータスをすべて０に変更するAPIの実装
