# internal/handler/http/presenter/character_presenter.go
@@ -43,3 +43,8 @@ type EditCharacterRes struct {
 	UserID    string    `json:"user_id"`
 	CreatedAt time.Time `json:"created_at"`
 }
+
+type JobChangeReq struct {
+	ID  string `json:"id" validate:"required" example:"550e8400-e29b-41d4-a716-446655440000"`
+	Job string `json:"job" validate:"required" example:"Hero"`
+}
